--- a/crash_duration_prediction.Rmd
+++ b/crash_duration_prediction.Rmd
@@ -18,16 +18,19 @@ mutate(decline_per_day = percent_decline/days_declining) %>%
 ```
 
 
-Creates lowess curve graph. Need to manually input current_decline_per_day variable.
+Creates loess curve graph. Need to manually input information for total_decline and total_days
 ```{r}
-# current_decline_per_day is the total % decrease since all time high divided by the total number of days between all time high and today
-current_decline_per_day = 56/49
+total_decline = 56          # BTC has dropped 56% from an all time high until today
+total_days = 50             # Currently has been 50 days of the crash since the all time high
+
+
+current_decline_per_day = total_decline/total_days   # current_decline_per_day is the total % decrease since all time high divided by the total number of days between all time high and today
     
 ggplot(crash_history_df, aes(x=decline_per_day, y=days_declining)) +
     geom_point(size=3) +
     geom_smooth(method="loess", span = 1, fill="darkorange1", color = "orange3", alpha = 0.45) +
         geom_smooth(method="loess", span = 3, fill="palegreen2", color = "green", alpha = 0.45) +
-    geom_vline( xintercept = 56/49, color="red") +
+    geom_vline( xintercept = current_decline_per_day, color="red") +
     scale_y_continuous(breaks=round(exp(seq(0,6.5,by=0.2)),0),trans=log2_trans()) +
     #scale_y_continuous(breaks=seq(0,6,by=0.25))  +
     scale_x_continuous(breaks=seq(0,25,by=0.25), limits = c(max(0, current_decline_per_day - 3.5), round(current_decline_per_day + 3.5))) +
@@ -36,6 +39,6 @@ ggplot(crash_history_df, aes(x=decline_per_day, y=days_declining)) +
     xlab("Average % Decline Per Day from All Time High") +
     ylab("Total # of Days Crash Lasted") +
     annotate("text", label = "Current Crash", x = current_decline_per_day - 0.05, y = 4, size = 4, colour = "red") +
-    geom_label(x = round(current_decline_per_day + 2), y = max(crash_history_df$log_days_declining), label = "Orange Model = More Conservative")
+    geom_label(x = round(current_decline_per_day + 2), y = max(crash_history_df$days_declining), label = "Orange Model = More Conservative")
 ```
 
