--- a/compare_coin_price_changes.Rmd
+++ b/compare_coin_price_changes.Rmd
@@ -1,51 +1,79 @@
-This only takes into consideration of top 50 coins in marketcap value.
 
-#### How to use generate_comparison function####
+Load essentials.
+```{r}
+setwd("~/Desktop/Crypto_Analysis-master")
+source("custom_functions.R")
+
+today = Sys.Date()
+```
+
+If you get an error loading the above, you must update this package. Press "YES" to restart R.
+```{r}
+install.packages("crypto")
+library(crypto)
+```
+
+
+#### How to use comparison_chart function####
 comparison_date:
-    The specific reference date that you want for all other dates to compare to. "YYYY-MM-DD" format. Can use Sys.Date() to get today's date.
+    The specific reference date that you want for all other dates to compare to. "YYYY-MM-DD" format. 
+    Use today to refer to today's date.
     
 end_date:
-    The furthest date in the time interval you want to compare with. "YYYY-MM-DD" format. Can use Sys.Date() to get today's date.
+    The furthest date in the time interval you want to compare with. "YYYY-MM-DD" format. 
+    [DEFAULT]: today's date.
 
 month_or_day:
     "day" = [DEFAULT] Looks at all the days between the start date and end date.
     "month" = Looks at all the months between the start date and end date
 
 interval:
-    Takes a number as the argument. The interval number of months or days the start to end date is divided by. Default value is 1.
+    Takes a number as the argument. The interval number of months or days the start to end date is divided by. 
+    [DEFAULT] value is 1.
 
 type:
     "marketcap" = [DEFAULT] sorts dataset by marketcap (descending).
     "percent" = sorts each column of dataset by the coin with the highest gain since that month.
     "name" = sorts dataset by coin name.
     "nopercent" = sorts dataset by marketcap (descending) without percent or name labels.
-    
+
 ```{r}
-setwd("~/Desktop/Crypto_Analysis-master")
-source("custom_functions.R")
-
-
-Sys.Date()
-
-comparison_date = "2017-12-01"
-end_date = "2018-02-05"
-month_or_day = "day"
-interval = 1
-type = "percent"
-
-# Creates datafile of top coin price histories
-coin.list = generate_coin.list(comparison_date, end_date, topranks=30) 
-
-# Creates comparison table of top coins
-output = generate_comparison(comparison_date, end_date, month_or_day, interval, type)
-
-View(output)
-title1 = paste("Percent Change of Top 15 Cryptocurrency Prices Compared to the Prices of", format(comparison_date, format="%B %d, %Y"))
-sjPlot::tab_df(output, title1, alternate.rows=TRUE ) 
-
-# Creatse comparison graph of top coins
-generate_multigraphs(comparison_date, end_date)
-
+comparison_chart(comparison_date="2017-01-01", month_or_day="month", interval=1, type="percent", topranks=50)
 ```
+
+
+
+
+#################################################################################
+
+#### How to use generate_comparison function####
+comparison_date:
+    The specific reference date that you want for all other dates to compare to. "YYYY-MM-DD" format. 
+    Use today to refer to today's date.
+    
+end_date:
+    The furthest date in the time interval you want to compare with. "YYYY-MM-DD" format. 
+    [DEFAULT]: today's date.
+
+filter_name: 
+	Compare by selected coin names.
+	Format: c("Bitcoin", "Ethereum") selects Bitcoin and Etereum.
+
+filter_rank: 
+	Compare by marketcap rank instead of name. 
+	Format: c(1:5) selects top 5 coins in marketcap.
+
+Creates comparison graph of price changes
+```{r}
+# Creates comparison graph of specific coins
+comparison_graph(comparison_date="2018-02-06", filter_name = c("Ripple", "Stellar", "Cardano", "Ethereum", "Bitcoin"))
+```
+
+```{r}
+# Creates comparison graph of top 5 marketcap rank coins
+comparison_graph(comparison_date="2018-02-06", filter_rank = c(1:5))
+```
+
+
 
 
